
** 9.0.0
  * Add language server config for QML (Qt Modeling Language) using qmlls.
  * Add new configuration options for lsp-html. Now able to toggle documentation hovers. Custom data is no longer experimental, and is now a vector.
  * Add support for RPM spec files
  * Add support for installing lsp dependencies via Cargo.
  * Fix tramp support issues (see [[https://github.com/emacs-lsp/lsp-mode/pull/4204][#4204]])
  * Add Cypher support.
  * Add Mojo 🔥 support
  * Add lsp-solidity, using the implementation from NomicFoundation
  * Change rust-analyzer base URL to be github.com/rust-lang/rust-analyzer, rather than rust-analyzer/rust-analyzer.
  * Add support for wgsl using [[https://github.com/wgsl-analyzer/wgsl-analyzer][wgsl-analyzer]]
  * Add [[https://github.com/wader/jq-lsp][jq-lsp]]
  * Add architecture triples for [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] file downloads, to support macos on ARM and X86.
  * Add semantic token support for [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] in lsp-erlang client.
  * Update [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] download file names to match new upstream names.
  * Add [[https://github.com/WhatsApp/erlang-language-platform][erlang-language-platform]] support in lsp-erlang client.
  * Add [[https://github.com/elixir-tools/credo-language-server][credo-language-server]]
  * Add support for clojure-ts-mode in clojure-lsp client
  * terraform-ls now supports prefill required fields and the ability to validate on save.
  * Ignore =.terraform= and =.terragrunt-cache= directories
  * ~lsp-bash~ now supports ~bash-ts-mode~, ~ebuild-mode~ and ~envrc-file-mode~
  * ~lsp-ruby-syntax-tree~, ~lsp-solargraph~, ~lsp-sorbet~, ~lsp-steep~, and ~lsp-typeprof~ now support ~ruby-ts-mode~
  * Drop support for emacs 26.1 and 26.2
  * Added support for ~textDocument/linkedEditingRange~ via